# desbordante-cli

./: LICENCE  README.md  pyproject.toml
.github/workflows/: release.yml
src/: cli.py
