[tool.poetry]
name = "desbordante-cli"
version = "1.1.1"
description = "CLI interface for Desbordante platform"
authors = ["Desbordante Team <chernishev@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11"
desbordante = "2.2.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
desbordante = "src.cli:desbordante_cli"
